about us section redesign

--- a/MyProject/Templates/webpages/about.html
+++ b/MyProject/Templates/webpages/about.html
@@ -11,83 +11,89 @@
     <section class="aboutContainer">
 
         <div class="aboutSecPg">
-            <div class="imagePixabt">
 
-              <img src="https://cdn.pixabay.com/photo/2017/07/16/07/50/imprint-2508603_960_720.jpg" 
-              alt="About Us" class="img-about">
+            <div class="aboutusPageDiv1">
 
-            </div>
+                <div class="ProfileContainerHeading">
 
-            <div class="ProjectSecpg">
-                <h2 class="aboutProjectpg">About Project</h2>
-                <p class="aboutProjectpara">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Corrupti, doloremque. Nulla voluptatibus omnis quos adipi
-                    sci nihil totam culpa necessitatibus quam recusandae quid
-                    em doloribus pariatur nostrum voluptas vero explicabo quo
-                    d itaque, quo, harum, modi quaerat? Lorem ipsum dolor, si
-                    amet consectetur adipisicing elit.dfvdg djd kekw iodf oko
-                    Corrupti, doloremque. Nulla voluptatibus omnis quos adipi
-                    sci nihil totam culpa necessitatibus quam recusandae quid
-                    em doloribus pariatur nostrum voluptas vero explicabo quo
-                    d itaque, quo, harum, modi quaerat? dfg gggg  serwerwer r
-                </p>
-            </div>
-
-<!----------------------------------- Founding members section------------------------------- -->
-
-
-            <div>
-                <h2 class="foundingPg">Our Founders</h2>
-
-                   <div class="ContainerAboutUs">
-
-
-                        <div class="container">
-
-                            <div>
-                                <a href="https://www.instagram.com/">
-
-                                <img src="{% static 'Untitled design.jpg' %}" alt="image" 
-                                id="aboutPGfounder" class="image1">
-
-                                </a>
-
-                                <p class="p">SAYANDEEP SAHA</p>
-
-                            </div>
-
-                        </div>
-                        
-                        
-                                        
-                    
-
-                        <div class="container">
-
-                            <div class="aboutPGfounder33">
-
-                                    <a href="https://www.instagram.com/">
-
-                                    <img src="{% static 'Untitled design.jpg' %}" alt="image" 
-                                    class="image1">
-
-                                    </a>
-
-                                    <p class="p">KUNTAL PAUL</p>
-
-                            </div>
-
-                            
-                                
-                        </div>
-
-                    </div> 
-
+                
+                    <img src="{% static 'About_us.png'%}" alt="Image">
+        
                 </div>
 
+                <!-------------------- Founding members section---------------->  
 
-            </div>
+                <div class="FoundersSectionPage">
+                    <h2 class="foundingPg">Our Founders</h2>
+    
+                       <div class="ContainerAboutUs">
+    
+    
+                            <div class="container">
+    
+                                <div>
+                                    <a href="https://www.instagram.com/">
+    
+                                    <img src="{% static 'Untitled design.jpg' %}" alt="image" 
+                                    id="aboutPGfounder" class="image1">
+    
+                                    </a>
+    
+                                    <p class="p">SAYANDEEP SAHA</p>
+    
+                                </div>
+    
+                            </div>
+                            
+                            
+                                            
+                        
+    
+                            <div class="container">
+    
+                                <div class="aboutPGfounder33">
+    
+                                        <a href="https://www.instagram.com/">
+    
+                                        <img src="{% static 'Untitled design.jpg' %}" alt="image" 
+                                        class="image1">
+    
+                                        </a>
+    
+                                        <p class="p">KUNTAL PAUL</p>
+    
+                                </div>
+    
+                                
+                                    
+                            </div>
+    
+                        </div> 
+    
+                    </div>
+
+               
+
+                </div>  
+
+                    <!-----------------------About Our Project Section----------------------->
+
+                <div class="ProjectSecpg">
+                    <h2 class="aboutProjectpg">About Project</h2>
+                        <p class="aboutProjectpara">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                            Corrupti, doloremque. Nulla voluptatibus omnis quos adipi
+                            sci nihil totam culpa necessitatibus quam recusandae quid
+                            em doloribus pariatur nostrum voluptas vero explicabo quo
+                            d itaque, quo, harum, modi quaerat? Lorem ipsum dolor, si
+                            amet consectetur adipisicing elit.dfvdg djd kekw iodf oko
+                            Corrupti, doloremque. Nulla voluptatibus omnis quos adipi
+                            sci nihil totam culpa necessitatibus quam recusandae quid
+                            em doloribus pariatur nostrum voluptas vero explicabo quo
+                            d itaque, quo, harum, modi quaerat? dfg gggg  serwerwer r
+                        </p>
+                </div> 
+          
 
         </div>
 
