--- a/MyProject/MyProject/static/css/aboutus.css
+++ b/MyProject/MyProject/static/css/aboutus.css
@@ -1,10 +1,9 @@
-.img-about {
-    width: 100%;
-    height: 425px;
+.aboutusPageDiv1 {
+  display: flex;
 }
 
 .aboutProjectpg {
-  margin-top: 25px;
+  margin-top: 60px;
   text-align: center;
   font-family: 'Courgette', cursive;
   color: crimson;
@@ -14,10 +13,18 @@
   padding: 10px;
   text-align: justify;
   font-family: 'Jost', sans-serif;
+  margin-bottom: 50px;
 }
 
+.FoundersSectionPage {
+  position: absolute;
+  top: 6.3em;
+  right: 18.3em;
+}
+  
+
 .foundingPg {
-    margin-top: 25px;
+  
   text-align: center;
   font-family: 'Courgette', cursive;
   color: crimson;
