--- a/MyProject/MyProject/static/css/profile.css
+++ b/MyProject/MyProject/static/css/profile.css
@@ -63,7 +63,7 @@
 }
 
 .GoogleLogin {
-    background-color: #dd4b39;
+    background-color: #ea4335;
     color: white;
     padding: 7px 30px;
     font-size: 25px;
@@ -71,7 +71,7 @@
     margin-left: 60px;
     outline: none;
     border-radius: 25px;
-    border-color: #dd4b39;
+    border-color: #ea4335;
     cursor: pointer;
     
 }
