--- a/MyProject/Templates/includes/navbar.html
+++ b/MyProject/Templates/includes/navbar.html
@@ -4,12 +4,12 @@
     <img src="{% static '/websiteLogo.png' %}" class="head-img" alt="firstimpression" />
     <!-- Navigation bar -->
     <ul id="navBar">
-        <li class="item"><a class="aitems" href="../webpages/index.html">Home</a></li>
-        <li class="item"><a class="aitems" href="../webpages/movies.html">Movies</a></li>
-        <li class="item"><a class="aitems" href="../webpages/webseries.html">Web Series</a></li>
-        <li class="item"><a class="aitems" href="../webpages/about.html">About Us</a></li>
-        <li class="item"><a class="aitems" href="../webpages/contact.html">Contact Us</a></li>
-        <li class="item"><a class="aitems" href="../webpages/profile.html" target="blank">Profile</a></li>
+        <li class="item"><a class="aitems" href="../webpages/index">Home</a></li>
+        <li class="item"><a class="aitems" href="../webpages/movies">Movies</a></li>
+        <li class="item"><a class="aitems" href="../webpages/webseries">Web Series</a></li>
+        <li class="item"><a class="aitems" href="../webpages/about">About Us</a></li>
+        <li class="item"><a class="aitems" href="../webpages/contact">Contact Us</a></li>
+        <li class="item"><a class="aitems" href="../webpages/profile" target="blank">Profile</a></li>
         <!-- search bar -->
         <div class="searchContainer">
             <form action="https://www.google.com/">     <!--should add server pointer to search -->
